# robot

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bringup/share/bringup/: package.sh
install/computer_vision/lib/computer_vision/: cv
install/computer_vision/share/computer_vision/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/controllers/lib/controllers/: follow_trajectory  follow_trajectory = controllers.follow_trajectory_controller:mainshutdown  joint_state  my_cobot  shutdown
install/controllers/share/controllers/: package.sh
install/coord_controller/lib/coord_controller/: my_cobot  state_machine
install/coord_controller/share/coord_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/description/share/description/: local_setup.sh  package.sh  package.xml
install/motion_planning/lib/motion_planning/: mp
install/motion_planning/share/motion_planning/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/moveit_config/share/moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/my_cobot_control/share/my_cobot_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_cobot_hardware_interface/include/my_cobot_hardware_interface/: MyCobotHardwareInterface.hpp
install/my_cobot_hardware_interface/share/my_cobot_hardware_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  (+6 more)
log/: latest_build  latest_list
src/block_mover/: package.xml  setup.cfg  setup.py
src/bringup/: package.xml  setup.py
src/bringup/launch/: bringup.launch.py
src/computer_vision/: package.xml  setup.py
src/computer_vision/computer_vision/: computer_vision.py
src/controllers/: package.xml  setup.py
src/controllers/controllers/: follow_trajectory_controller.py  my_cobot_server.py
src/coord_controller/: package.xml  setup.cfg  setup.py
src/coord_controller/coord_controller/: inverse_kinematics.py  my_cobot.py
src/imgs/: Moveit2.webm
src/motion_planning/: package.xml  setup.py
src/motion_planning/launch/: motion_planning.launch.py
src/moveit_config/: .setup_assistant
src/moveit_config/config/: joint_limits.yaml  mycobot_ai.ros2_control.xacro  mycobot_ai.srdf  mycobot_ai.urdf.xacro
src/moveit_config/launch/: demo.launch.py  moveit.launch.py  setup_assistant.launch.py  warehouse_db.launch.py
src/my_cobot_control/: CMakeLists.txt
src/my_cobot_control/src/: my_cobot_hardware.cpp
src/my_cobot_hardware_interface/: CMakeLists.txt  my_cobot_hardware_interface.xml
src/my_cobot_hardware_interface/include/my_cobot_hardware_interface/: MyCobotHardwareInterface.hpp
src/my_cobot_hardware_interface/src/: MyCobotHardwareInterface.cpp
src/my_cobot_interfaces/: CMakeLists.txt  package.xml
src/my_cobot_interfaces/msg/: Block.msg
src/robot_description/: package.xml  setup.py
src/robot_description/urdf/: SuctionPumpFeet.STL  SuctionPumpMeters.STL  env_meters_correct_coords.STL  mycobot_with_vision_v2.urdf
(+215 files in other folders)
