<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion_planning</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lance.fowler@plp.com">lance</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>pymoveit2</build_depend>
  <build_depend>scipy</build_depend>

  <exec_depend>pymoveit2</exec_depend>
  <exec_depend>scipy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
