<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coord_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lance.fowler@plp.com">lance</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>pymycobot</exec_depend>
  <exec_depend>my_cobot_interfaces</exec_depend>
  <exec_depend>time</exec_depend>
  <exec_depend>math</exec_depend>
  <exec_depend>scipy</exec_depend>
  <exec_depend>RPi.GPIO</exec_depend>
  <exec_depend>itertools</exec_depend>
  <exec_depend>matplotlib</exec_depend>
  <exec_depend>mpt_toolkits</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
